7/9 done, shorted some answers